--- a/PWM/设备树配置说明.md
+++ b/PWM/设备树配置说明.md
@@ -140,3 +140,19 @@ sudo reboot
 ```
 
 等待重启完成
+
+
+
+## 查看是否配置成功
+
+![](./images/pwm3.png)
+
+PWM 子系统会暴露设备节点
+
+运行： `ls -l /sys/class/pwm/pwmchip*/device`
+
+![](./images/pwm4.png)
+
+可以看到，pwmchip0 与上面 k1-x.dtsi 里面配置的 pwm4 的 reg 字段一样，因此在这里使用 pwmchip0 
+
+pwmchip1 是内核顺带注册，不用管
