--- a/PWM/设备树配置说明.md
+++ b/PWM/设备树配置说明.md
@@ -107,6 +107,11 @@ linux-6.6/arch/riscv/boot/dts/spacemit/k1-x_MUSE-Pi-Pro.dts
 编译出新的内核deb包
 
 ```
+sudo apt install debhelper libpfm4-dev libtraceevent-dev asciidoc libelf-dev devscripts \
+flex bison u-boot-tools
+```
+
+```
 export ARCH=riscv
 export CROSS_COMPILE=riscv64-unknown-linux-gnu-
 make k1_defconfig
