Add GPIO hand out

--- a/GPIO/GPIO输出/cpp/gpiodv2.x/编译说明.md
+++ b/GPIO/GPIO输出/cpp/gpiodv2.x/编译说明.md
@@ -2,9 +2,21 @@
 ## 依赖库:
 sudo apt install libgpiod-dev
 
-## 编译命令：
+## 编译命令1
+
 g++ led_gpiod_2x.cpp -o led_gpiod_2x -lgpiodcxx -lgpiod
 
+自动计算chip index 和 引脚偏移
+
+# 编译命令2
+
+g++ led_gpiod_2x_hand.cpp -o led_gpiod_2x_hand -lgpiodcxx -lgpiod
+
+# 运行（手动指定 chip 和 offset）
+
+sudo ./led_gpiod_2x_hand 2 19
+
+输出: 使用 /dev/gpiochip2 引脚 19
 
 ## 解释：
 
