--- a/GPIO/GPIO输出/cpp/gpiodv2.x/编译说明.md
+++ b/GPIO/GPIO输出/cpp/gpiodv2.x/编译说明.md
@@ -6,6 +6,8 @@ sudo apt install libgpiod-dev
 
 g++ led_gpiod_2x.cpp -o led_gpiod_2x -lgpiodcxx -lgpiod
 
+./led_gpiod_2x 83
+
 自动计算chip index 和 引脚偏移
 
 # 编译命令2
